--- a/.github.sample/workflows/main.yml
+++ b/.github.sample/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Main workflow
 
 on:
   push:
@@ -9,14 +9,22 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Specific Node.js version 🦄
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v3.5.0
+
       - name: Install and Build
         run: |
           npm install
+          npm run generate-chats-qr
           npm run build
+
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           branch: gh-pages
           folder: dist
