--- a/.github.sample/workflows/main.yml
+++ b/.github.sample/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Install and Build 🛠
+      - name: Install and Build 📎
+        env:
+          BASE_URL: ${{ vars.BASE_URL }}
         run: |
           npm install
           npm run build
