--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_SARA_INTE_HOST=https://web-tech-tw.github.io/sara.inte
+VITE_SARA_INTE_HOST=https://web-tech-tw.github.io/sara
 VITE_SARA_RECV_HOST=https://web-tech-tw.eu.org/sara.recv
 VITE_SARA_TOKEN_NAME=unified_token
