--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_SARA_INTE_HOST=https://web-tech-tw.github.io/sara
-VITE_SARA_RECV_HOST=https://web-tech-tw.eu.org/sara.recv
+VITE_HOME_INTE_HOST=https://web-tech.tw
+
+VITE_SARA_INTE_HOST=https://web-tech.tw/sara
 VITE_SARA_TOKEN_NAME=unified_token
